k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nanodesigner
  labels:
    name: nanodesigner
    environment: production
